--- a/Css/employeePayrollApp.css
+++ b/Css/employeePayrollApp.css
@@ -147,7 +147,7 @@ select {
   font-size: 20px;
   font-family: Roboto;
   letter-spacing: 0px;
-  color: #374b5e;
+  color: #42515f;
   opacity: 1;
   background: transparent;
   border: none;
@@ -159,15 +159,45 @@ select {
 }
 
 .submitButton {
-  border: none;
-  background-color: #f5f5f5;
+  border: 1px solid #969696;
+  background: #e2e2e2 0% 0% no-repeat padding-box;
   margin-right: 30px;
+  opacity: 1;
+  border-radius: 5px;
+}
+
+.submitButton:hover {
+  background-color: #82a70c;
+  text-decoration: none;
+  color: #f5f5f5;
 }
 
 .cancelButton {
+  border: 1px solid #969696;
+  background: #e2e2e2 0% 0% no-repeat padding-box;
   margin-left: 140px;
   text-decoration: none;
   text-align: center;
+  border-radius: 5px;
+  opacity: 1;
+}
+
+.cancelButton:hover {
+  background-color: #707070;
+  text-decoration: none;
+  color: #f5f5f5;
+}
+
+.resetButton {
+  background: #e2e2e2 0% 0% no-repeat padding-box;
+  border: 1px solid #969696;
+  border-radius: 5px;
+  opacity: 1;
+}
+.resetButton:hover {
+  background-color: #707070;
+  text-decoration: none;
+  color: #f5f5f5;
 }
 
 @media only screen and (max-width: 960px) {
