--- a/Css/home.css
+++ b/Css/home.css
@@ -48,3 +48,59 @@ body {
 * {
   box-sizing: border-box;
 }
+
+/* UC15 */
+
+.add-button {
+  font: normal normal normal 22px/29px Roboto;
+  letter-spacing: 0px;
+  color: white;
+  opacity: 1;
+  background-color: #8dc63f;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 18px;
+  outline: none;
+  cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh-80px);
+  background-color: #f7f7f7;
+  padding: 30px 0 10px;
+  box-sizing: border-box;
+}
+
+.header-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
+
+.emp-detail-text {
+  font: normal normal normal bold 24px/25px Roboto;
+  letter-spacing: 0px;
+  color: #42515f;
+  opacity: 1;
+}
+
+.emp-count {
+  background-color: #82a70c;
+  color: #ffffff;
+  border-radius: 42%;
+  font-size: 16px;
+  width: 26px;
+  text-align: center;
+  display: inline-block;
+}
+
