--- a/Css/home.css
+++ b/Css/home.css
@@ -174,3 +174,68 @@ td img {
   margin-bottom: 8px;
   margin-right: 2px;
 }
+
+@media (max-width: 300px) {
+  .emp-text {
+    font: normal normal bold 20px/25px Montserrat;
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: 0px;
+    color: #82a70c;
+    text-transform: capitalize;
+    display: flex;
+    padding-left: 5px;
+  }
+
+  .add-button {
+    font: normal normal normal 18px/19px Roboto;
+    letter-spacing: 0px;
+    color: white;
+    opacity: 1;
+    background-color: #8dc63f;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 18px;
+    outline: none;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    display: flex;
+    align-items: center;
+  }
+
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh-80px);
+    background-color: #f7f7f7;
+    padding: 30px 0 10px;
+    box-sizing: border-box;
+  }
+
+  .header-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+    padding-bottom: 25px;
+  }
+
+  .emp-detail-text {
+    font: normal normal normal bold 24px/25px Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    opacity: 1;
+  }
+
+  .emp-count {
+    background-color: #82a70c;
+    color: #ffffff;
+    border-radius: 30%;
+    font-size: 12px;
+    width: 26px;
+    text-align: center;
+    display: inline-block;
+  }
+}
